package/helm/nginx-ingress/test_nginx.yaml

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 5 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod-nginx.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.8
        ports:
        - containerPort: 80
        volumeMounts:
        - name: mytestpvc1
          mountPath: "/usr/share/nginx/html"
      volumes:
        - name: mytestpvc1
          persistentVolumeClaim:
            claimName: mytestpvc1
