package/helm/nginx-ingress/ingress_nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-test
  namespace: default 
spec:
  rules:
  - host: test1.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: nginx-deployment
          servicePort: 80
  - host: test2.com
    http:
        paths:
        - path: /*
          backend:
            serviceName: nginx
            servicePort: 80
