package/helm/nginx-ingress/ingress_test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-nginx-ingress
  namespace: default
spec:
  rules:
  - host: mynginx.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
  - host: nginx.deployment.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-deployment
          servicePort: 80
